--- a/index.html
+++ b/index.html
@@ -21,16 +21,28 @@
 
     </header>
 
-    <section class="section-1"></section>
+    <section class="section-1">
+        <button class="btn section-1__btn">Button</button>
+        <button class="btn section-1__btn">Button</button>
+        <button class="btn section-1__btn">Button</button>
+    </section>
     <section class="section-2"></section>
     <section class="section-3"></section>
 
 
 
     <footer class="footer">
-        <!-- <p class="copyright">
+        <ul class="nav">
+            <li class="nav__item"><a href="#" class="nav__link">navmenu-1</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">navmenu-2</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">navmenu-3</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">navmenu-4</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">navmenu-5</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">navmenu-6</a></li>
+        </ul>
+        <p class="copyright">
             &copy; Copyright 2020 by Attila Horvath.
-        </p> -->
+        </p>
     </footer>
 </body>
 
